--- a/Bookify-server/src/main/resources/application.properties
+++ b/Bookify-server/src/main/resources/application.properties
@@ -29,7 +29,7 @@ server.ssl.key-alias=https
 
 server.port=8082
 
-spring.security.oauth2.client.registration.keycloak.client-id=login-app
+spring.security.oauth2.client.registration.keycloak.client-id=test-login
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid
 
@@ -38,20 +38,7 @@ spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_us
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/SpringBootKeycloak
 spring.security.oauth2.client.registration.keycloak.redirect-uri=https://localhost:4200/*
 
-##spring.ldap.embedded.ldif=src/main/resources/server.ldif
-#spring.ldap.embedded.base-dn=dc=example,dc=com
-#spring.ldap.embedded.port=10389
 
-# LDAP URL to the existing LDAP server
 spring.ldap.urls=ldap://localhost:10389
-
-# Base DN for LDAP searches
-spring.ldap.base=ou=system
-
-# User DN and password for authentication (if required)
 spring.ldap.username=uid=admin,ou=system
 spring.ldap.password=secret
-
-# Optionally, specify the search filter for user authentication
-#spring.ldap.base-roles-dn=ou=groups,dc=example,dc=com
-#spring.ldap.user-dn-pattern=uid={0},ou=users
